# epson-connect

./: .flake8  .gitignore  LICENSE  README.md  SUGGESTIONS  pyproject.toml  tox.ini
.github/workflows/: cicd.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/epson_connect/: authenticate.py  client.py  printer.py  printer_settings.py  scanner.py
tests/: test_authenticate.py  test_client.py  test_printer_settings.py
